# yat-server

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2021-10-07-113254_create_tasks/: up.sql
migrations/2021-10-07-114229_create_lists/: down.sql  up.sql
migrations/2021-10-07-114611_create_lists_tasks/: down.sql  up.sql
migrations/2021-10-07-123207_create_users/: up.sql
src/: controller.rs  db.rs  main.rs  schema.rs  user.rs
