[package]
name = "yat-backend"
version = "0.1.0"
authors = ["ChronosX88 <chronosx88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.7.1"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4", features = ["serde"]}
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
custom_error = "1.9.2"